delete not used classes, formatting responses from spring security and controllers